<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/late_gothic_hall_zoom"
    tools:context=".LateGothicHall">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="473dp"
        android:layout_height="843dp"
        android:contentDescription="@string/Late_Gothic_Hall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/late_gothic_hall" />

    <ImageView
        android:id="@+id/Podcast"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/podcast_inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/podcastinactive" />

    <TextView
        android:id="@+id/GalleryName"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/avenir"
        android:text="@string/late_gothic_hall"
        android:textColor="@color/galleryColor"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/zoom_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zoomout" />

    <Button
        android:id="@+id/Zoom_Out"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="launchFirstFloor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Christopher"
        android:layout_width="26dp"
        android:layout_height="28dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/btn_background_color"
        android:onClick="SaintChristopher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Micheal"
        android:layout_width="24dp"
        android:layout_height="61dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="295dp"
        android:backgroundTint="@color/btn_background_color"
        android:onClick="SaintMicheal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Andrew"
        android:layout_width="77dp"
        android:layout_height="28dp"
        android:layout_marginStart="154dp"
        android:layout_marginBottom="34dp"
        android:backgroundTint="@color/btn_background_color"
        android:onClick="SaintAndrew"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ChangeMedia"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/change_media"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>