<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuentiduenaChapel">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="532dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fuentiduena_chapel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fuentidue_a_chapel" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="56dp"
        android:layout_height="46dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/podcast_inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/podcastinactive" />

    <TextView
        android:id="@+id/GalleryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/avenir"
        android:text="@string/Fuentidueña_Chapel"
        android:textColor="@color/galleryColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/zoom_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/zoomout" />

    <Button
        android:id="@+id/Zoom_Out"
        android:layout_width="54dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:onClick="launchFirstFloor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>