<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Carousell"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="473dp"
        android:layout_height="843dp"
        android:contentDescription="@string/Langon_Chapel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gallery10carousel" />


    <ImageView
        android:id="@+id/Podcast"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/podcast_inactive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/podcastactive" />

    <TextView
        android:id="@+id/GalleryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/avenir"
        android:text="@string/Glass_Gallery"
        android:textColor="@color/galleryColor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="backtoView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImageSlider"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="80dp"
        android:paddingEnd="80dp">

    </androidx.viewpager2.widget.ViewPager2>

</androidx.constraintlayout.widget.ConstraintLayout>